hphp/hack/test/typecheck/function_pointer/projected_type_const_error2.php.exp
ERROR: File "projected_type_const_error2.php", line 21, characters 10-20:
Invalid return type (Typing[4110])
  File "projected_type_const_error2.php", line 9, characters 23-25:
  Expected `int`
  File "projected_type_const_error2.php", line 20, characters 36-41:
  But got `string`
